Arreglos en documentación y README añadido

--- a/Documentación.tex
+++ b/Documentación.tex
@@ -89,4 +89,7 @@ Algoritmo de priorización:
     \item Podar el 40\% inferior en fase tardía
 \end{enumerate}
 
+\section{Profundidad Iterativa}
+Para simultáneamente no incumplir con lar restricciones de tiempo y aprovecharlo todo lo posible, se implementa un sistema que evalua antes de aumentar la profundidad de búsqueda el tiempo disponible, devolviendo la mejor jugada alcanzada según el tiempo dado en vez de tener una profundidad prefijada.
+
 \end{document}
